edited body of the content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ My Website
 </title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>I Am a Python Learner. Bless me
+<body>I Am a Python Learner. very interest to learn.........
 <script type="text/javascript" src="script.js">
 </script>
 </body>
