changed color of the background

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <title>
-My Website
+Master Web Site
 </title>
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>I Am a Python Learner. very interest to learn.........
+<body>I Am a Python Learner........
 <script type="text/javascript" src="script.js">
 </script>
 </body>
